# puzzlebot_ws_challenge3

./: README.md
matlab/: experimento_angular.csv  experimento_lineal.csv  identificacion_pid.m
src/puzzlebot_control/: package.xml  setup.py
src/puzzlebot_control/config/: waypoints.yaml
src/puzzlebot_control/launch/: part1.launch.py  part2.launch.py
src/puzzlebot_control/puzzlebot_control/: controller_node.py  data_exporter.py  odometry_node.py  path_generator_node.py
src/puzzlebot_msgs/: CMakeLists.txt  package.xml
src/puzzlebot_msgs/msg/: GoalPose.msg
